@@ -16,6 +16,10 @@ module WWW
     def inspect
       "#{name} = #{@value}"
     end
+
+    def query_value
+      [[@name, @value || '']]
+    end
   end
   
   # This class represents a file upload field found in a form.  To use this
@@ -40,9 +44,6 @@ module WWW
   
   # This class represents a Submit button in a form.
   class Button < Field
-    def add_to_query(query)
-      query << [@name, @value || ''] if @name
-    end
   end 
   
   # This class represents an image button in a form.  Use the x and y methods
@@ -56,12 +57,10 @@ module WWW
       super(name, value)
     end
 
-    def add_to_query(query)
-      if @name
-        query << [@name, @value || '']
-        query << [@name + ".x", (@x || 0).to_s]
-        query << [@name + ".y", (@y || 0).to_s]
-      end
+    def query_value
+        super <<
+         [@name + ".x", (@x || 0).to_s] <<
+         [@name + ".y", (@y || 0).to_s]
     end
   end
   
@@ -79,48 +78,149 @@ module WWW
   # This class represents a check box found in a Form.  To activate the
   # CheckBox in the Form, set the checked method to true.
   class CheckBox < RadioButton
+    def query_value
+      [[@name, @value || "on"]]
+    end
   end
   
+  # This class represents a select list where multiple values can be selected.
+  # MultiSelectList#value= accepts an array, and those values are used as
+  # values for the select list.  For example, to select multiple values,
+  # simply do this:
+  #  list.value = ['one', 'two']
+  # Single values are still supported, so these two are the same:
+  #  list.value = ['one']
+  #  list.value = 'one'
+  class MultiSelectList < Field
+    attr_accessor :options
+  
+    def initialize(name, node)
+      value = []
+      @options = WWW::Mechanize::List.new
+  
+      # parse
+      (node/'option').each do |n|
+        option = Option.new(n, self)
+        @options << option
+      end
+      super(name, value)
+    end
+
+    def query_value
+      value.collect { |v| [name, v] }
+    end
+
+    # Select no options
+    def select_none
+      @value = []
+      options.each { |o| o.unselect }
+    end
+
+    # Select all options
+    def select_all
+      @value = []
+      options.each { |o| o.select }
+    end
+
+    # Get a list of all selected options
+    def selected_options
+      @options.find_all { |o| o.selected? }
+    end
+
+    def value=(values)
+      select_none
+      values.each do |value|
+        option = options.find { |o| o.value == value }
+        if option.nil?
+          @value.push(value)
+        else
+          option.select
+        end
+      end
+    end
+
+    def value
+      value = []
+      value.push(*@value)
+      value.push(*selected_options.collect { |o| o.value })
+      value
+    end
+  end
+
   # This class represents a select list or drop down box in a Form.  Set the
   # value for the list by calling SelectList#value=.  SelectList contains a
   # list of Option that were found.  After finding the correct option, set
   # the select lists value to the option value:
   #  selectlist.value = selectlist.options.first.value
-  class SelectList < Field
-    attr_accessor :options
-  
+  # Options can also be selected by "clicking" or selecting them.  See Option
+  class SelectList < MultiSelectList
     def initialize(name, node)
-      value = nil
-      @options = WWW::Mechanize::List.new
-  
-      # parse
-      (node/'option').each do |n|
-        option = Option.new(n)
-        @options << option
-        value = option.value if option.selected && value.nil?
+      super(name, node)
+      if selected_options.length > 1
+        selected_options.reverse[1..selected_options.length].each do |o|
+          o.unselect
+        end
       end
-      value = @options.first.value if (value == nil && @options.first)
-      super(name, value)
     end
 
-    alias :old_value= :value=
+    def value
+      value = super
+      if value.length > 0
+        value.last
+      elsif @options.length > 0
+        @options.first.value
+      else
+        nil
+      end
+    end
 
-    def value=(value)
-      @value = value.to_s
+    def value=(new)
+      if new.respond_to? :first
+        super([new.first])
+      else
+        super([new.to_s])
+      end
     end
   end
 
   # This class contains option an option found within SelectList.  A
-  # SelectList can have many Option classes associated with it.
+  # SelectList can have many Option classes associated with it.  An option
+  # can be selected by calling Option#select, or Option#click.
   class Option
-    attr_reader :value, :selected, :text
+    attr_reader :value, :selected, :text, :select_list
 
     alias :to_s :value
+    alias :selected? :selected
 
-    def initialize(node)
+    def initialize(node, select_list)
       @text     = node.all_text
       @value    = node.attributes['value']
-      @selected = node.attributes['selected'] ? true : false
+      @selected = node.attributes.has_key?('selected') ? true : false
+      @select_list = select_list # The select list this option belongs to
+    end
+
+    # Select this option
+    def select
+      unselect_peers
+      @selected = true
+    end
+
+    # Unselect this option
+    def unselect
+      @selected = false
+    end
+
+    # Toggle the selection value of this option
+    def click
+      unselect_peers
+      @selected = !@selected
+    end
+
+    private
+    def unselect_peers
+      if @select_list.instance_of? WWW::Mechanize::SelectList
+        @select_list.select_none
+      end
     end
   end
   end
