@@ -1,0 +1,16 @@
+<html>
+  <body>
+    <form name="form1" method="post" action="/form_post">
+      <select name="list" multiple size="3">
+        <option value="1">Option 1</option>
+        <option value="2" selected>Option 2</option>
+        <option value="3">Option 3</option>
+        <option value="4">Option 4</option>
+        <option value="5">Option 5</option>
+        <option value="6">Option 6</option>
+      </select>
+      <br />
+      <input type="submit" value="Submit" />
+    </form>
+  </body>
+</html>
