@@ -1,0 +1,16 @@
+<html>
+  <body>
+    <form name="form1" method="post" action="/form_post">
+      <select name="list">
+        <option value="1" selected>Option 1</option>
+        <option value="2" selected>Option 2</option>
+        <option value="3" selected>Option 3</option>
+        <option value="4" selected>Option 4</option>
+        <option value="5" selected>Option 5</option>
+        <option value="6" selected>Option 6</option>
+      </select>
+      <br />
+      <input type="submit" value="Submit" />
+    </form>
+  </body>
+</html>
