@@ -1,0 +1,10 @@
+<html>
+  <body>
+    <form name="form1" method="post" action="/form_post">
+      <select name="list">
+      </select>
+      <br />
+      <input type="submit" value="Submit" />
+    </form>
+  </body>
+</html>
