@@ -28,6 +28,11 @@ require 'tc_post_form'
 require 'tc_pluggable_parser'
 require 'tc_page'
 require 'tc_form_no_inputname'
+require 'tc_multi_select'
+require 'tc_select_all'
+require 'tc_select_none'
+require 'tc_select'
+require 'tc_select_noopts'
 #require 'tc_proxy'
 #require 'tc_ssl_server'
 
